// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/ScaleFade passes the snapshot test when initialScale is set 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "opacity": 1,
        "scale": 1,
      }
    }
    animatedStyle={
      {
        "value": {
          "opacity": 0,
          "transform": [
            {
              "scale": 0.5,
            },
          ],
        },
      }
    }
    collapsable={false}
    exit={
      {
        "opacity": 0,
        "scale": 0.5,
      }
    }
    exitTransition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
    from={
      {
        "opacity": 0,
        "scale": 0.5,
      }
    }
    style={
      {
        "opacity": 0,
        "transform": [
          {
            "scale": 0.5,
          },
        ],
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      animate={
        {
          "color": "#1A2138",
        }
      }
      animatedStyle={
        {
          "value": {
            "color": "#1A2138",
          },
        }
      }
      collapsable={false}
      style={
        {
          "color": "#1A2138",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "includeFontPadding": false,
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      This is a test
    </Text>
  </View>
</View>
`;

exports[`Atoms/ScaleFade passes the snapshot test when show is false 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
/>
`;

exports[`Atoms/ScaleFade passes the snapshot test when show is true 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "opacity": 1,
        "scale": 1,
      }
    }
    animatedStyle={
      {
        "value": {
          "opacity": 0,
          "transform": [
            {
              "scale": 0.7,
            },
          ],
        },
      }
    }
    collapsable={false}
    exit={
      {
        "opacity": 0,
        "scale": 0.7,
      }
    }
    exitTransition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
    from={
      {
        "opacity": 0,
        "scale": 0.7,
      }
    }
    style={
      {
        "opacity": 0,
        "transform": [
          {
            "scale": 0.7,
          },
        ],
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      animate={
        {
          "color": "#1A2138",
        }
      }
      animatedStyle={
        {
          "value": {
            "color": "#1A2138",
          },
        }
      }
      collapsable={false}
      style={
        {
          "color": "#1A2138",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontStyle": "normal",
          "fontWeight": "400",
          "includeFontPadding": false,
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      This is a test
    </Text>
  </View>
</View>
`;
